--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "toin0u/digitalocean-v2": "^4.5"
   },
   "require-dev": {
-    "drupal/core-dev": "^9.4"
+    "drupal/core-dev": "^9.4",
+    "mglaman/phpstan-drupal": "^1.1"
   },
   "conflict": {
     "drupal/drupal": "*"
@@ -38,6 +39,12 @@
     "platform": {
       "php": "8.1"
     }
+  },
+  "scripts": {
+    "static-analysis": [
+      "phpcs -p",
+      "phpstan analyze --memory-limit 1G"
+    ]
   },
   "extra": {
     "drupal-scaffold": {
